ops/servicemesh/timeout/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleeper
  labels:
    app: sleeper
spec:
  selector:
    app: sleeper
  ports:
  - port: 8000
    targetPort: http
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sleeper
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: sleeper
    spec:
      containers:
      - name: sleeper
        image: golang:1.13
        ports:
          - name: http
            containerPort: 8000
        command: ["sh", "-c", "go run /app/main.go"]
        volumeMounts:
        - name: goapp
          mountPath: /app
      volumes:
        - name: goapp
          configMap:
            name: goapp
